<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Animal Sounds</string>
    <string name="app_name_kids">Animal Sounds for Kids</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

     <string name="nothing"></string>

     <string name="animal_json_file">animalBeats_v1.0.json</string>

     <string name="kids_font">fonts/kids.ttf</string>
    <string name="admob_publisher"></string>
    <string name="more_apps_from_andro_">More apps from Andro+_</string>

    <string name="fav_txt">Favourite</string>
    <string name="share_txt">Share</string>
    <string name="rm_txt">Remove Ads</string>
    <string name="mapps_txt">More Apps</string>
    <string name="moreM_txt">more Menu</string>
    
     <!--  cross Promote -->
     <string name="cp_xml_type">GEN</string>
     <string name="cp_xml_file">cp.xml</string>
     <string name="font_size_default"></string>
     <string name="animal_list">Animal List</string>

    <!-- IAP -->
    <string name="base64_encoded_publickey"></string>
    <string name="adfree_sku">remove_ads_animal_beats</string>
    <string name="iap_title">Remove Ads!</string>
    <string name="iap_msg">Upgrade now to enjoy an ad-free experience! Would you like to proceed?</string>
    <string name="iap_restore">Restore Purchases</string>
    <string name="iap_upgrade">Upgrade Now</string>
    <string name="iap_success_title">Upgrade Successful!</string>
    <string name="iap_success_message">You have successfully upgraded to the Ad-free version!</string>
    <string name="iap_failure_title">Upgrade Failure!</string>
    <string name="iap_failure_message">An error occurred while trying to upgrade(Ad-free)! Please try again later.</string>
    <string name="iap_restore_success_title">Successfully restored purchase!</string>
    <string name="iap_restore_success_message">Your purchase has been successfully restored! You are now using the Ad-Free version!</string>
    <string name="iap_restore_failure_title">Error!</string>
    <string name="iap_restore_failure_message">An error occurred while trying to restore your purchase! Please try again later.</string>
    <string name="iap_restore_no_purchase_title">No Purchases!</string>
    <string name="iap_restore_no_purchase_message">You have not purchased any items yet.</string>
    <string name="cannot_connect_title">Can\'t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market.
        Your version of Market may be out of date or connection issue.
     	You can continue to use this app but you
    	won\'t be able to make purchases now.</string>
    <string name="hintext">Search: Idly,Chicken..etc</string>

     
          <!-- MOPUB & OTHERS -->	
     <string name="mopub_mobile_banner"></string>
     <string name="mopub_mobile_fullscreen"></string>
     
     <string name="mopub_tablet_banner"></string>
     <string name="mopub_tablet_fullscreen"></string>
     
     
    <string name="admob_banner_id"></string>
    <string name="admob_fullscreen_id"></string>

    <string name="mopub_mobile_reward"></string>
    <string name="mopub_tablet_reward"></string>

    <!--INMOBI-->

    <string name="inmobi_account_id"></string>
     <string name="inmobi_banner_id"></string>
     <string name="inmobi_fullscreen_id"></string>
    <string name="inmobi_native_id"></string>
    <string name="vungle"></string>
     
     <string name="mm_banner"></string>
     <string name="mm_fullscreen"></string>

    <string name="reward_main_txt">15 நிமிடம் விளம்பரம் இல்லாமல் தொடர வேண்டுமா?</string>
    <string name="reward_watch_txt">சிறு வீடியோவை பாருங்கள்!</string>
    <string name="reward_cancel_txt">வேண்டாம்</string>
    <string name="volume">volume</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
